--- a/ui-config.json
+++ b/ui-config.json
@@ -237,7 +237,7 @@
     "img2img/PNG info directory/visible": true,
     "img2img/PNG info directory/value": "",
     "img2img/Resize mode/visible": true,
-    "img2img/Resize mode/value": "Just resize",
+    "img2img/Resize mode/value": "Just resize (latent upscale)",
     "img2img/Mask blur/visible": true,
     "img2img/Mask blur/value": 4,
     "img2img/Mask blur/minimum": 0,
@@ -261,7 +261,7 @@
     "img2img/Sampling method/visible": true,
     "img2img/Sampling method/value": "DPM++ 2M Karras",
     "img2img/Sampling steps/visible": true,
-    "img2img/Sampling steps/value": 20,
+    "img2img/Sampling steps/value": 15,
     "img2img/Sampling steps/minimum": 1,
     "img2img/Sampling steps/maximum": 150,
     "img2img/Sampling steps/step": 1,
@@ -311,7 +311,7 @@
     "img2img/Image CFG Scale/maximum": 3.0,
     "img2img/Image CFG Scale/step": 0.05,
     "img2img/Denoising strength/visible": true,
-    "img2img/Denoising strength/value": 0.75,
+    "img2img/Denoising strength/value": 0.50,
     "img2img/Denoising strength/minimum": 0.0,
     "img2img/Denoising strength/maximum": 1.0,
     "img2img/Denoising strength/step": 0.01,
