--- a/ui-config.json
+++ b/ui-config.json
@@ -34,7 +34,7 @@
     "txt2img/\u2195\ufe0f/visible": true,
     "txt2img/Refresh/visible": true,
     "txt2img/Sampling method/visible": true,
-    "txt2img/Sampling method/value": "Euler a",
+    "txt2img/Sampling method/value": "DPM++ 2M Karra",
     "txt2img/Sampling steps/visible": true,
     "txt2img/Sampling steps/value": 20,
     "txt2img/Sampling steps/minimum": 1,
@@ -237,7 +237,7 @@
     "img2img/PNG info directory/visible": true,
     "img2img/PNG info directory/value": "",
     "img2img/Resize mode/visible": true,
-    "img2img/Resize mode/value": "Just resize (latent upscale)",
+    "img2img/Resize mode/value": "Just resize",
     "img2img/Mask blur/visible": true,
     "img2img/Mask blur/value": 4,
     "img2img/Mask blur/minimum": 0,
@@ -270,19 +270,19 @@
     "img2img/Tiling/visible": true,
     "img2img/Tiling/value": false,
     "img2img/Width/visible": true,
-    "img2img/Width/value": 512,
+    "img2img/Width/value": 1024,
     "img2img/Width/minimum": 64,
     "img2img/Width/maximum": 2048,
     "img2img/Width/step": 8,
     "img2img/Height/visible": true,
-    "img2img/Height/value": 512,
+    "img2img/Height/value": 1536,
     "img2img/Height/minimum": 64,
     "img2img/Height/maximum": 2048,
     "img2img/Height/step": 8,
     "img2img/\u21c5/visible": true,
     "img2img/\ud83d\udcd0/visible": true,
     "img2img/Scale/visible": true,
-    "img2img/Scale/value": 1.0,
+    "img2img/Scale/value": 2.0,
     "img2img/Scale/minimum": 0.05,
     "img2img/Scale/maximum": 4.0,
     "img2img/Scale/step": 0.05,
