--- a/ui-config.json
+++ b/ui-config.json
@@ -311,7 +311,7 @@
     "img2img/Image CFG Scale/maximum": 3.0,
     "img2img/Image CFG Scale/step": 0.05,
     "img2img/Denoising strength/visible": true,
-    "img2img/Denoising strength/value": 0.50,
+    "img2img/Denoising strength/value": 0.5,
     "img2img/Denoising strength/minimum": 0.0,
     "img2img/Denoising strength/maximum": 1.0,
     "img2img/Denoising strength/step": 0.01,
@@ -730,5 +730,100 @@
     "train/Choose latent sampling method/value": "once",
     "train/Train Embedding/visible": true,
     "train/Train Hypernetwork/visible": true,
-    "webui/Tabs@tabs/selected": null
+    "webui/Tabs@tabs/selected": null,
+    "txt2img/\ud83d\udd8c\ufe0f/visible": true,
+    "txt2img/Close/visible": true,
+    "txt2img/Hires checkpoint/visible": true,
+    "txt2img/Hires checkpoint/value": "Use same checkpoint",
+    "customscript/refiner.py/txt2img/Checkpoint/visible": true,
+    "customscript/refiner.py/txt2img/Checkpoint/value": "",
+    "customscript/refiner.py/txt2img/Switch at/visible": true,
+    "customscript/refiner.py/txt2img/Switch at/value": 0.8,
+    "customscript/refiner.py/txt2img/Switch at/minimum": 0.01,
+    "customscript/refiner.py/txt2img/Switch at/maximum": 1.0,
+    "customscript/refiner.py/txt2img/Switch at/step": 0.01,
+    "customscript/seed.py/txt2img/Seed/visible": true,
+    "customscript/seed.py/txt2img/Seed/value": -1,
+    "customscript/seed.py/txt2img/Extra/visible": true,
+    "customscript/seed.py/txt2img/Extra/value": false,
+    "customscript/seed.py/txt2img/Variation seed/visible": true,
+    "customscript/seed.py/txt2img/Variation seed/value": -1,
+    "customscript/seed.py/txt2img/Variation strength/visible": true,
+    "customscript/seed.py/txt2img/Variation strength/value": 0.0,
+    "customscript/seed.py/txt2img/Variation strength/minimum": 0,
+    "customscript/seed.py/txt2img/Variation strength/maximum": 1,
+    "customscript/seed.py/txt2img/Variation strength/step": 0.01,
+    "customscript/seed.py/txt2img/Resize seed from width/visible": true,
+    "customscript/seed.py/txt2img/Resize seed from width/value": 0,
+    "customscript/seed.py/txt2img/Resize seed from width/minimum": 0,
+    "customscript/seed.py/txt2img/Resize seed from width/maximum": 2048,
+    "customscript/seed.py/txt2img/Resize seed from width/step": 8,
+    "customscript/seed.py/txt2img/Resize seed from height/visible": true,
+    "customscript/seed.py/txt2img/Resize seed from height/value": 0,
+    "customscript/seed.py/txt2img/Resize seed from height/minimum": 0,
+    "customscript/seed.py/txt2img/Resize seed from height/maximum": 2048,
+    "customscript/seed.py/txt2img/Resize seed from height/step": 8,
+    "customscript/negpip.py/txt2img/active/visible": true,
+    "customscript/negpip.py/txt2img/active/value": false,
+    "customscript/xyz_grid.py/txt2img/Use text inputs instead of dropdowns/visible": true,
+    "customscript/xyz_grid.py/txt2img/Use text inputs instead of dropdowns/value": false,
+    "txt2img/\ud83d\uddc3\ufe0f/visible": true,
+    "txt2img/\ud83d\uddbc\ufe0f/visible": true,
+    "txt2img/\ud83c\udfa8\ufe0f/visible": true,
+    "txt2img/\ud83d\udcd0/visible": true,
+    "txt2img/Preferred VAE/visible": true,
+    "txt2img/Preferred VAE/value": "None",
+    "txt2img/txt2img_extra_sort_order/value": "Default Sort",
+    "txt2img/Show dirs/value": true,
+    "img2img/\ud83d\udd8c\ufe0f/visible": true,
+    "img2img/Close/visible": true,
+    "customscript/refiner.py/img2img/Checkpoint/visible": true,
+    "customscript/refiner.py/img2img/Checkpoint/value": "",
+    "customscript/refiner.py/img2img/Switch at/visible": true,
+    "customscript/refiner.py/img2img/Switch at/value": 0.8,
+    "customscript/refiner.py/img2img/Switch at/minimum": 0.01,
+    "customscript/refiner.py/img2img/Switch at/maximum": 1.0,
+    "customscript/refiner.py/img2img/Switch at/step": 0.01,
+    "customscript/seed.py/img2img/Seed/visible": true,
+    "customscript/seed.py/img2img/Seed/value": -1,
+    "customscript/seed.py/img2img/Extra/visible": true,
+    "customscript/seed.py/img2img/Extra/value": false,
+    "customscript/seed.py/img2img/Variation seed/visible": true,
+    "customscript/seed.py/img2img/Variation seed/value": -1,
+    "customscript/seed.py/img2img/Variation strength/visible": true,
+    "customscript/seed.py/img2img/Variation strength/value": 0.0,
+    "customscript/seed.py/img2img/Variation strength/minimum": 0,
+    "customscript/seed.py/img2img/Variation strength/maximum": 1,
+    "customscript/seed.py/img2img/Variation strength/step": 0.01,
+    "customscript/seed.py/img2img/Resize seed from width/visible": true,
+    "customscript/seed.py/img2img/Resize seed from width/value": 0,
+    "customscript/seed.py/img2img/Resize seed from width/minimum": 0,
+    "customscript/seed.py/img2img/Resize seed from width/maximum": 2048,
+    "customscript/seed.py/img2img/Resize seed from width/step": 8,
+    "customscript/seed.py/img2img/Resize seed from height/visible": true,
+    "customscript/seed.py/img2img/Resize seed from height/value": 0,
+    "customscript/seed.py/img2img/Resize seed from height/minimum": 0,
+    "customscript/seed.py/img2img/Resize seed from height/maximum": 2048,
+    "customscript/seed.py/img2img/Resize seed from height/step": 8,
+    "customscript/negpip.py/img2img/active/visible": true,
+    "customscript/negpip.py/img2img/active/value": false,
+    "customscript/xyz_grid.py/img2img/Use text inputs instead of dropdowns/visible": true,
+    "customscript/xyz_grid.py/img2img/Use text inputs instead of dropdowns/value": false,
+    "img2img/\ud83d\uddc3\ufe0f/visible": true,
+    "img2img/\ud83d\uddbc\ufe0f/visible": true,
+    "img2img/\ud83c\udfa8\ufe0f/visible": true,
+    "img2img/Preferred VAE/visible": true,
+    "img2img/Preferred VAE/value": "None",
+    "img2img/img2img_extra_sort_order/value": "Default Sort",
+    "img2img/Show dirs/value": true,
+    "extras/\ud83d\uddbc\ufe0f/visible": true,
+    "extras/\ud83c\udfa8\ufe0f/visible": true,
+    "extras/\ud83d\udcd0/visible": true,
+    "modelmerger/Save metadata/visible": true,
+    "modelmerger/Save metadata/value": true,
+    "modelmerger/Add merge recipe metadata/visible": true,
+    "modelmerger/Add merge recipe metadata/value": true,
+    "modelmerger/Copy metadata from merged models/visible": true,
+    "modelmerger/Copy metadata from merged models/value": true,
+    "modelmerger/Read metadata from selected checkpoints/visible": true
 }
