--- a/ui-config.json
+++ b/ui-config.json
@@ -259,7 +259,7 @@
     "img2img/Only masked padding, pixels/maximum": 256,
     "img2img/Only masked padding, pixels/step": 4,
     "img2img/Sampling method/visible": true,
-    "img2img/Sampling method/value": "Heun",
+    "img2img/Sampling method/value": "DPM++ 2M Karras",
     "img2img/Sampling steps/visible": true,
     "img2img/Sampling steps/value": 15,
     "img2img/Sampling steps/minimum": 1,
