--- a/config.json
+++ b/config.json
@@ -34,7 +34,7 @@
     "temp_dir": "",
     "clean_temp_dir_at_start": false,
     "save_incomplete_images": false,
-    "outdir_samples": "",
+    "outdir_samples": "/content/drive/MyDrive/colab-data/",
     "outdir_txt2img_samples": "outputs/txt2img-images",
     "outdir_img2img_samples": "outputs/img2img-images",
     "outdir_extras_samples": "outputs/extras-images",
@@ -46,7 +46,7 @@
     "save_to_dirs": true,
     "grid_save_to_dirs": true,
     "use_save_to_dirs_for_ui": false,
-    "directories_filename_pattern": "[date]",
+    "directories_filename_pattern": "genIMG",
     "directories_max_prompt_words": 8,
     "ESRGAN_tile": 192,
     "ESRGAN_tile_overlap": 8,
