--- a/ui-config.json
+++ b/ui-config.json
@@ -962,7 +962,7 @@
     "txt2img/ControlNet guidance end/maximum": 1.0,
     "txt2img/ControlNet guidance end/step": 0.01,
     "txt2img/ADetailer model 2nd/visible": true,
-    "txt2img/ADetailer model 2nd/value": "None",
+    "txt2img/ADetailer model 2nd/value": "hand_yolov8n.pt",
     "txt2img/ad_prompt 2nd/visible": true,
     "txt2img/ad_prompt 2nd/value": "",
     "txt2img/ad_negative_prompt 2nd/visible": true,
